Fixed detail text alignment
The detail text was misaligned due to variance in icon width, so
I wrapped the icons in a div and paired that with an explicit width.
This ensures that all of the detail text will line up.

--- a/scss/components/_user.scss
+++ b/scss/components/_user.scss
@@ -161,6 +161,10 @@
     }
   }
 
+  &__icon {
+    width: 1.25rem;
+  }
+
   &__link {
     color: var(--color-text);
     text-decoration: none;
